# pipcn

./: README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
src/pipcn/: __about__.py  __main__.py
src/pipcn/cli/: __init__.py
