[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipcn"
dynamic = ["version"]
description = '快速、方便的使用pip的国内镜像源安装/更新包~'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "xuanzhi33", email = "xuanzhi33@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/xuanzhi33/pipcn#readme"
Issues = "https://github.com/xuanzhi33/pipcn/issues"
Source = "https://github.com/xuanzhi33/pipcn"

[project.scripts]
pipcn = "pipcn.cli:pipcn"

[tool.hatch.version]
path = "src/pipcn/__about__.py"
